--- a/src/App.css
+++ b/src/App.css
@@ -148,3 +148,15 @@ input[type='number'] {
 .list li:hover .delete-btn {
     opacity: 1;
 }
+
+.cuatrimestre{
+    flex-basis: 0;
+    flex-grow: 1;
+    padding: 0 10px;
+}
+
+#pde{
+    display: flex;
+    justify-content: space-between;
+    column-count: 11;
+}
